Version 1.2
~~~~~~~~~~~
Release 6 from June 9, 2016 contains basic ALMA support.

See src/Changelog for further information.